WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266375
REGRESSION (
271966@main
): Netflix playback fails on iPadOS after adopting AVSampleBufferAttachContentKey
https://bugs.webkit.org/show_bug.cgi?id=266375
Summary
REGRESSION (271966@main): Netflix playback fails on iPadOS after adopting AVS...
Andy Estes
Reported
2023-12-13 14:51:50 PST
REGRESSION (
271966@main
): Netflix playback fails on iPadOS after adopting AVSampleBufferAttachContentKey
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2023-12-13 14:53:12 PST
<
rdar://problem/119345487
>
Andy Estes
Comment 2
2023-12-13 15:02:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21768
EWS
Comment 3
2023-12-13 16:19:38 PST
Committed
272014@main
(15a1de2814bc): <
https://commits.webkit.org/272014@main
> Reviewed commits have been landed. Closing PR #21768 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug