Cherry-pick 15a1de2814bc. rdar://119345487

REGRESSION (271966@main): Netflix playback fails on iPadOS after adopting AVSampleBufferAttachContentKey
    https://bugs.webkit.org/show_bug.cgi?id=266375
    rdar://119345487

    Reviewed by Jer Noble.

    On iOS a key may be usable for decryption even when its status isn't KeyStatus::Usable. Accounted
    for this by reusing the logic in CDMInstanceFairPlayStreamingAVFObjC::isAnyKeyUsable to determine if
    a key is usable. Also asserted that there is no usable key whenever
    CDMInstanceSessionFairPlayStreamingAVFObjC::contentKeyForSample returns nil.

    * Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
    (WebCore::isPotentiallyUsableKeyStatus):
    (WebCore::CDMInstanceFairPlayStreamingAVFObjC::isAnyKeyUsable const):
    (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::isAnyKeyUsable const):
    (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::contentKeyForSample):

    Canonical link: https://commits.webkit.org/272014@main

Identifier: 271831.20@safari-7618.1.9-branch